# todo-list

./: Makefile  README.md  docker-compose.yml
server/: Dockerfile  manage.py  pyproject.toml  uwsgi.ini
server/core/: swagger.py
server/tests/: test_registration.py  test_tasks.py
server/tests/base/: test_base.py
server/todo/: admin.py  filters.py  models.py  routers.py  serializers.py  services.py  views.py
server/todo/migrations/: 0001_initial.py  0002_techparkparticipants.py
server/todo_list/: asgi.py  settings.py  urls.py  wsgi.py
